--- a/MVC201612/MVC201612.csproj
+++ b/MVC201612/MVC201612.csproj
@@ -126,6 +126,16 @@
     <Compile Include="Models\Module02\Person.cs" />
     <Compile Include="Models\Module02\PersonHelper.cs" />
     <Compile Include="Models\Module02\PersonViewModel.cs" />
+    <Compile Include="Models\Resource\Views\Module02\edit.da.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>edit.da.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Resource\Views\Module02\edit.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>edit.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -142,6 +152,16 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Models\Resource\Views\Module02\edit.da.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>edit.da.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Models\Resource\Views\Module02\edit.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>edit.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
